[gd_scene load_steps=2 format=4]

[ext_resource path="res://scripts/Sanctuary.gd" type="Script" id="1"]

[node name="Sanctuary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.827451, 0.905882, 0.831373, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offsets = PackedFloat32Array(16, 16, -16, -16)
alignment = BoxContainer.ALIGNMENT_CENTER

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sanctuary"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 26

[node name="DinoFrame" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 400)

[node name="DinoMargin" type="MarginContainer" parent="VBoxContainer/DinoFrame"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offsets = PackedFloat32Array(12, 12, -12, -12)

[node name="DinoTexture" type="TextureRect" parent="VBoxContainer/DinoFrame/DinoMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 5
expand_mode = 1

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1
